Setup docs and status for register
